--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,8 +28,8 @@ http {
             '"$http_x_forwarded_for" $host $request_time $upstream_response_time $scheme '
             '$cookie_evalogin';
 
-        access_log /opt/log/nginx/access.log main;
-        error_log  /opt/log/nginx/error.log;
+        access_log /opt/logs/nginx/access.log main;
+        error_log  /opt/logs/nginx/error.log;
 
         gzip on;
         gzip_disable "msie6";
@@ -37,4 +37,5 @@ http {
         gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
         include /etc/nginx/conf.d/*.conf;
         include /etc/nginx/sites-enabled/*.conf;
+        include /opt/conf/nginx.vhost/*.conf;
 }
