--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -1,9 +1,23 @@
 # The MySQL  Client configuration file.
 #
-# For explanations see
+# For explanations see 更多的参数请参考下面的url
 # http://dev.mysql.com/doc/mysql/en/server-system-variables.html
 
 [mysql]
+default-character-set=utf8
 
 [mysqld]
+# 错误日志
+log-error=/var/log/mysql/error.log
+# 慢查询日志相关
+long-query-time=1
+slow-query-log=ON
+slow-query-log-file=/var/log/mysql/slow.log
+# 普通日志
+general-log=ON
+general-log-file=/var/log/mysql/general.log
+# 严格模式
 sql-mode="STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_AUTO_CREATE_USER,NO_ENGINE_SUBSTITUTION"
+
+
+
