--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,12 @@ mysql:
       - "3306:3306"
     volumes:
       - /d/docker/opt/data/mysql:/var/lib/mysql
+      - /d/docker/opt/logs/mysql:/var/log/mysql
     environment:
-      MYSQL_ROOT_PASSWORD: 123456
+      - MYSQL_DATABASE=sw
+      - MYSQL_USER=rrrr
+      - MYSQL_PASSWORD=123456
+      - MYSQL_ROOT_PASSWORD=123456
 
 redis:
     build: ./redis
