--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,58 @@
-nginx:
-    build: ./nginx
-    ports:
-      - "80:80"
-    links:
-      - "php"
-    volumes:
-      - /d/docker/opt:/opt
+version: '2'
 
-php:
-    build: ./php
-    ports:
-      - "9000:9000"
-    links:
-      - "mysql"
-      - "redis"
-    volumes:
-      - /d/docker/opt:/opt
+networks:
+  frontend:
+    driver: "bridge"
+  backend:
+    driver: "bridge"
 
-mysql:
-    build: ./mysql
-    ports:
-      - "3306:3306"
-    volumes:
-      - /d/docker/opt/data/mysql:/var/lib/mysql
-      - /d/docker/opt/logs/mysql:/var/log/mysql
-    environment:
-      - MYSQL_DATABASE=sw
-      - MYSQL_USER=rrrr
-      - MYSQL_PASSWORD=123456
-      - MYSQL_ROOT_PASSWORD=123456
+services:
+    nginx:
+      build:
+        context: ./nginx
+      ports:
+        - "80:80"
+      links:
+        - "php"
+      volumes:
+        - ${WORKSPACE}:/opt/
+      networks:
+        - frontend
+        - backend
 
-redis:
-    build: ./redis
-    ports:
-      - "6379:6379"
+    php:
+      build: ./php
+      ports:
+        - "9000:9000"
+        - "8000:8000"
+      links:
+        - "mysql"
+        - "redis"
+      volumes:
+        - ${WORKSPACE}:/opt
+        - ${LOGS_PATH}/php:/opt/logs/php
+      networks:
+        - backend
+
+    mysql:
+      build: ./mysql
+      ports:
+        - "3306:3306"
+      volumes:
+        - ${DATA_PATH}/mysql:/var/lib/mysql
+        - ${LOGS_PATH}/mysql:/var/log/mysql
+      environment:
+        - MYSQL_DATABASE=sw
+        - MYSQL_USER=rrrr
+        - MYSQL_PASSWORD=123456
+        - MYSQL_ROOT_PASSWORD=123456
+      networks:
+        - backend
+
+    redis:
+      build: ./redis
+      ports:
+        - "6379:6379"
+      networks:
+        - backend
+
