--- a/opt/conf/nginx.vhost/linkcloud.vhost.conf
+++ b/opt/conf/nginx.vhost/linkcloud.vhost.conf
@@ -1,18 +1,47 @@
-server {
-    listen   80;
-    index index.html index.htm;
+server{
+    listen 80;
     server_name test.linkcloud.mobi;
+    root   "/opt/htdocs/everlink/app/public";
 
-    root /opt/htdocs/ddd;
-    index index.php index.html index.htm;
     location / {
-        try_files $uri $uri/ /index.html;
+        index  index.html index.htm index.php l.php;
+        autoindex  on;
+        # try_files $uri $uri/ /dev.php/$uri;
+        if (!-e $request_filename){
+            rewrite ^/(.*)$ /dev.php/$1 last;
+        }
     }
 
-    location ~ \.php {
-        include fastcgi_params;
+    location ~ \.php(.*)$  {
         fastcgi_pass   php:9000;
         fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME  /opt/htdocs/ddd$fastcgi_script_name;
+        fastcgi_split_path_info  ^((?U).+\.php)(/?.+)$;
+        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        fastcgi_param  PATH_INFO  $fastcgi_path_info;
+        fastcgi_param  PATH_TRANSLATED  $document_root$fastcgi_path_info;
+        include        fastcgi_params;
     }
+
+    # location ~ .*\.(gif|jpg|jpeg|png)$ {    
+
+    #     try_files $uri /asset/private/ccn/$uri;
+
+    #     # root "F:\www\everlink\app\public\";#指定图片存放路径    
+    #     # access_log /usr/local/websrv/nginx-1.9.4/logs/images.log;#日志存放路径    
+    #     proxy_store on;    
+    #     proxy_store_access user:rw group:rw all:rw;    
+    #     proxy_temp_path         /;#图片访问路径    
+    #     proxy_redirect          off;    
+    #     proxy_set_header        Host 127.0.0.1;    
+    #     client_max_body_size    10m;    
+    #     client_body_buffer_size 1280k;    
+    #     proxy_connect_timeout   900;    
+    #     proxy_send_timeout      900;    
+    #     proxy_read_timeout      900;    
+    #     proxy_buffer_size       40k;    
+    #     proxy_buffers           40 320k;    
+    #     proxy_busy_buffers_size 640k;    
+    #     proxy_temp_file_write_size 640k;    
+
+    # }      
 }
