--- a/php/php-fpm.conf
+++ b/php/php-fpm.conf
@@ -1,13 +1,13 @@
 [global]
 
-;error_log = /opt/log/php/fpm-error.log
-error_log = /proc/self/fd/2
+error_log = /opt/logs/php/error.log
+; error_log = /proc/self/fd/2
 daemonize = no
 
 [www]
 
-;access.log = /opt/log/php/fpm-access.log
-access.log = /proc/self/fd/2
+access.log = /opt/logs/php/access.log
+;access.log = /proc/self/fd/2
 access.format = "%R - %u %t \"%m %r%Q%q\" %s %f %{mili}d %{kilo}M %C%%"
 
 user = www-data
@@ -28,4 +28,4 @@ clear_env = no
 rlimit_files = 1048576
 ;request_terminate_timeout = 0
 ;request_slowlog_timeout = 1
-;slowlog = /opt/log/php/php-slow.log
+slowlog = /opt/logs/php/slow.log
